--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 html, body {
 	padding: 0;
 	margin: 0;
+	font-size: 12pt;
 }
 
 body {
-	font-size: 12pt;
 	font-family: 'Open Sans', 'Meiryo', sans-serif;
 	background: #fafafa;
 }
@@ -27,23 +27,30 @@ s:active {
 }
 
 #header {
-	background: rgba(0, 0, 0, 0.7);
+	background: #444;
 	color: #fff;
 	height: 50px;
-	border-bottom: 1px solid black;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	z-index: 100;
+	box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.4);
 }
 
-#header:after {
-	content: '';
-	display: block;
-	width: 100%;
-	clear: both;
+#header.green {
+	background: #669933;
 }
+#header.red {
+	background: #9D344B;
+}
+#header.blue {
+	background: #2A4F6E;
+}
+#header.yellow {
+	background: #AA8439;
+}
+
 
 .wrapper {
 	display: block;
@@ -82,14 +89,14 @@ s:active {
 
 	height: 50px;
 	line-height: 50px;
-	padding: 0px 16px;
+	padding: 0px 24px;
 
 	font-size: 10pt;
 
 	box-sizing: border-box;
 
 	text-transform: uppercase;
-	transition: background linear 0.2s;
+	
 }
 #header #menu-navigator a:hover {
 	background: rgba(255, 255, 255, 0.3);
@@ -159,6 +166,11 @@ span#app_desc {
 	margin: 0;
 	padding: 0;
 }
+#main-menu:after {
+	content: '';
+	display: block;
+	clear: both;
+}
 #main-menu li {
 	display: block;
 	float: left;
@@ -169,29 +181,31 @@ span#app_desc {
 #main-menu li > a {
 	text-decoration: none;
 }
+#main-menu li > a:hover {
+	text-decoration: underline;
+}
 #main-menu h2 {
 	font-size: 14pt;
-	font-weight: normal;
+	font-weight: bold;
 	margin: 0;
 	padding: 20px 0px 6px 0px;
+	font-family: 'Yu Mincho', 'HGMinchoB', 'Meiryo', serif;
 }
 #main-menu h2 span.fa:before {
-	font-size: 0.8em;
+	font-size: 1.2em;
 	color: #fff;
-	border-radius: 50%;
 	padding: 6px;
 	margin-right: 6px;
 	display: inline-block;
-	width: 1em;
-	height: 1em;
 	text-align: center;
+	width: 18px;
 }
 
 #main-menu li.menu-download a {
 	color: #669933;
 }
 #main-menu li.menu-download h2 span:before {
-	background: #669933;
+	color: #669933;
 }
 
 
@@ -199,7 +213,7 @@ span#app_desc {
 	color: #9D344B;
 }
 #main-menu li.menu-library h2 span:before {
-	background: #9D344B;
+	color: #9D344B;
 }
 
 
@@ -207,7 +221,7 @@ span#app_desc {
 	color: #2A4F6E;
 }
 #main-menu li.menu-spec h2 span:before {
-	background: #2A4F6E;
+	color: #2A4F6E;
 }
 
 
@@ -215,25 +229,50 @@ span#app_desc {
 	color: #AA8439;
 }
 #main-menu li.menu-qna h2 span:before {
-	background: #AA8439;
+	color: #AA8439;
 }
 
 .article {
 	margin-top: 20px;
 	background: #fff;
 	border: 1px solid #ddd;
-	padding: 10px 12px;
+	padding: 18px 24px;
 	box-shadow: 0px 0px 20px rgba(100, 100, 100 , 0.1);
 }
 .article h2.article-title {
-	font-weight: normal;
+	font-weight: bold;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 4px 0;
 	border-bottom: 1px solid #ddd;
-	margin-bottom: 4px;
+	font-family: "Yu Mincho", "Century", "HGMinchoB", "Meiryo", serif;
+	line-height: 1.4;
+	font-size: 24pt;
+	color: #666;
 }
-.article div.article-content {
+.article h3 {
+	font-family: "Yu Mincho", "Century", "HGMinchoB", "Meiryo", serif;
+}
 
+table.spec-table {
+	border-collapse: collapse;
+	width: 100%;
+}
+table.spec-table * {
+	padding: 4px 24px;
+}
+table.spec-table tr {
+	border-bottom: 1px solid #ddd;
+}
+table.spec-table th {
+	font-weight: normal;
+	text-align: left;
+	background: #f4f4f4;
+	border-bottom: 1px solid #ccc;
+	color: #666;
+}
+
+div#content > div > .article:last-child {
+	margin-bottom: 24px;
 }
 
 #latest-update {
@@ -335,9 +374,11 @@ img.left {
 	clear: both;
 }
 .article-item h3 {
-	margin: 0;
-	padding: 24px 0px 6px 0px;
-	color: #555;
+	margin: 24px 0px 6px 0px;
+	padding: 0 12px;
+	color: #444;
+	border: 1px dotted #ccc;
+	border-left: 4px solid #07c;
 }
 .article-item h3 + span {
 	display: block;
@@ -355,4 +396,32 @@ img.left + h3 + span {
 
 .page_msg {
 	padding: 6px 0px;
+}
+
+.article.library a {
+	color: #07c;
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	word-wrap: break-word;
+}
+.article.library a:hover {
+	color: red;
+	text-decoration: none;
+}
+.article.library h3 {
+	border: 1px solid #ddd;
+	border-left-width: 4px;
+	padding: 4px 10px;
+}
+.article.library h3 a {
+	color: #444;
+	text-decoration: none;
+}
+
+footer span#copyright {
+	display: block;
+	text-align: center;
+	color: #444;
+	padding: 12px 0;
+	font-size: 11pt;
 }
